Revert "Fixed NativeButton 1px caption jump #8294"

--- a/WebContent/VAADIN/themes/base/button/button.scss
+++ b/WebContent/VAADIN/themes/base/button/button.scss
@@ -91,14 +91,13 @@
 	margin: 0;
 	color: inherit;
 	font: inherit;
-	line-height: normal;	
+	line-height: normal;
 	}
 .v-nativebutton .v-nativebutton-caption {
 	vertical-align: middle;
 	white-space: nowrap;
 	font: inherit;
 	color: inherit;
-	display:block;
 	}
 
 .v-nativebutton .v-icon {
